--- a/src/components/AppHeader.css
+++ b/src/components/AppHeader.css
@@ -1,6 +1,9 @@
 .headcontainer {
   display: flex;
   flex-direction: column;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
 
 .App-header {
@@ -15,6 +18,7 @@
   flex: 1;
   display: flex;
   justify-content: flex-start;
+  padding: 0 1%;
 }
 
 .meuTitle{
@@ -27,5 +31,6 @@
   flex: 1;
   display: flex;
   justify-content: flex-end;
+  padding: 0 1%;
 }
   
