--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -1,7 +1,14 @@
 .Menu {
-  flex: 1;
-  max-width: 1024px;
   display: flex;
-  flex-direction: column;
+  position: absolute;
+  width: 100%;
+  flex-direction: row;
   justify-content: center;
+  background-color: #282c34;
+  color: white;
+  z-index: 2;
+}
+
+.MenuHidden {
+  display: none;
 }
