--- a/src/components/Phone.css
+++ b/src/components/Phone.css
@@ -1,7 +1,11 @@
 .Phone {
   flex: 1;
-  max-width: 1024px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
+  background-color: white;
+}
+
+.PhoneHidden {
+  display: none;
 }
