--- a/src/components/Phone.css
+++ b/src/components/Phone.css
@@ -9,3 +9,14 @@
 .PhoneHidden {
   display: none;
 }
+
+.PhoneMedia {
+  max-width: 100%;
+  height: auto;
+}
+
+.PhoneInner {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
