--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -1,6 +1,7 @@
 .Menu {
   display: flex;
   position: absolute;
+  z-index:  1;
   width: 100%;
   flex-direction: column;
   justify-content: center;
