--- a/src/components/Phone.css
+++ b/src/components/Phone.css
@@ -1,9 +1,10 @@
 .Phone {
-  flex: 1;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  background-color: white;
+  width: 100%;
+  position: absolute;
+  z-index: -1;
+  background-color:  rgba(255, 239, 213,.9);
+  height: 100vh;
+  padding-bottom: 3vh;
 }
 
 .PhoneHidden {
@@ -16,7 +17,9 @@
 }
 
 .PhoneInner {
-  flex: 1;
+  position: absolute;
+  width: 100%;
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
