--- a/src/components/Phone.css
+++ b/src/components/Phone.css
@@ -1,25 +1,41 @@
 .Phone {
   width: 100%;
-  position: absolute;
   z-index: -1;
+  position: absolute;
   background-color:  rgba(255, 239, 213,.9);
   height: 100vh;
-  padding-bottom: 3vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .PhoneHidden {
   display: none;
 }
 
-.PhoneMedia {
-  max-width: 100%;
-  height: auto;
+.PhoneButtonsHidden {
+  display: none;
 }
 
-.PhoneInner {
+.PhoneMediaVid {
+  max-width: 100%;
+}
+
+.PhoneMediaAud {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.PhoneButtons {
   position: absolute;
   width: 100%;
+  height: 80vh;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.LastButtonLine  {
+  margin:  8vh;
 }
