--- a/src/components/Phone.css
+++ b/src/components/Phone.css
@@ -2,7 +2,7 @@
   width: 100%;
   z-index: -1;
   position: absolute;
-  background-color:  rgba(255, 239, 213,.9);
+  background-color:  rgba(255, 239, 213,.8);
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -18,7 +18,10 @@
 }
 
 .PhoneMediaVid {
-  max-width: 100%;
+  width: 100%;
+  object-fit:  cover;
+  flex: 1;
+  overflow: hidden;
 }
 
 .PhoneMediaAud {
@@ -34,8 +37,4 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
-}
-
-.LastButtonLine  {
-  margin:  8vh;
 }
