--- a/src/components/PhoneButtons.css
+++ b/src/components/PhoneButtons.css
@@ -43,12 +43,13 @@
 }
 
 .PadBtn {
+    font-family: 'IBMPlexMono';
     font-size: calc(1.5rem + 2vmin);
     background-color: #ffefd5;
     border-radius: 25%;
     /* box-shadow: .2rem .2rem grey; */
-    padding-left: .5rem;
-    padding-right: .5rem;
+    padding-left: .8rem;
+    padding-right: .8rem;
 }
 
 .PadBtn:hover {
@@ -58,18 +59,20 @@
 }
 
 .phoneInfo  {
+    font-family: 'IBMPlexMono';
     font-size: calc(1.5rem + 2vmin);
     flex:  1;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
 }
 
 .infonum  {
     background-color: #ffefd5;
-    padding-left: .25rem;
-    padding-right: .25rem;
-    margin-right: .25rem;
+    padding-left: .8rem;
+    padding-right: .8rem;
+    margin-right: .8rem;
 }
 
 .numclear {
@@ -88,6 +91,33 @@
     /* color:  #ffefd5; */
     background-color: #db7093;
 }
+
+
+.subline {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+    padding-top: 1rem;
+}
+
+
+.subbtn {
+    font-family: 'MaterialIcons', fantasy;
+    font-size: calc(1.5rem + 2vmin);
+    color: black;
+}
+
+.subbtn:hover {
+    cursor: pointer;
+    color: #db7093;
+}
+
+
+
+
+
+
 
 .nodisp {
     display: none;
