--- a/src/components/PhoneButtons.css
+++ b/src/components/PhoneButtons.css
@@ -75,7 +75,31 @@
     /* background-color: #ffefd5; */
     padding-left: .8rem;
     padding-right: .8rem;
-    margin-right: .8rem;
+    text-shadow: 
+        -1px -1px 0 #ffefd5,
+        1px -1px 0 #ffefd5,
+        -1px 1px 0 #ffefd5,
+        1px 1px 0 #ffefd5;
+}
+
+.passInfo {
+    flex:  1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.passact {
+    text-shadow: 
+        -1px -1px 0 #ffefd5,
+        1px -1px 0 #ffefd5,
+        -1px 1px 0 #ffefd5,
+        1px 1px 0 #ffefd5;
+}
+
+.passval {
+    font-size: calc(1.5rem + 2vmin);
     text-shadow: 
         -1px -1px 0 #ffefd5,
         1px -1px 0 #ffefd5,
@@ -89,9 +113,8 @@
     background-color: #ffefd5;
     border-radius: 25%;
     /* box-shadow: .2rem .2rem grey; */
-    padding-left: .5rem;
-    padding-right: .5rem;
-    margin-left: .25rem;
+    padding-left: .25rem;
+    padding-right: .25rem;
 }
 
 .numclear:hover {
