safe fix linter warnings

--- a/src/components/team/Users.css
+++ b/src/components/team/Users.css
@@ -63,8 +63,8 @@
 .recnam {
     grid-area: nam;
     align-self: center;
-    justify-self: end;
-    text-align: end;
+    justify-self: center;
+    text-align: center;
 }
 
 .recdel {
